// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom props 1`] = `
<div
  style="height: 100vh; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif; margin: 0px; display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; padding: 0px 24px;"
>
  <div
    style="font-size: 4.3em; font-weight: 100; margin-bottom: 16px;"
  >
    301
  </div>
  <div
    style="font-size: 1.3em; font-weight: 300; margin-bottom: 8px;"
  >
    Error name
  </div>
  <div
    style="font-size: 0.9em; color: rgb(89, 89, 89); max-width: 400px;"
  >
    Error message
  </div>
  <div
    style="font-size: 0.9em; color: rgb(89, 89, 89); max-width: 400px; margin-top: 4px;"
  >
    Error description
  </div>
  <div
    style="margin-top: 24px;"
  >
    <a
      href="/"
      style="color: rgb(24, 144, 255); text-decoration: none;"
    >
      Return to home page
    </a>
  </div>
</div>
`;

exports[`default 1`] = `
<div
  style="height: 100vh; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif; margin: 0px; display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; padding: 0px 24px;"
>
  <div
    style="font-size: 4.3em; font-weight: 100; margin-bottom: 16px;"
  >
    500
  </div>
  <div
    style="font-size: 1.3em; font-weight: 300; margin-bottom: 8px;"
  >
    Error
  </div>
  <div
    style="font-size: 0.9em; color: rgb(89, 89, 89); max-width: 400px;"
  >
    An error has occurred.
  </div>
  <div
    style="margin-top: 24px;"
  >
    <a
      href="/"
      style="color: rgb(24, 144, 255); text-decoration: none;"
    >
      Return to home page
    </a>
  </div>
</div>
`;
